pimcore-jetpakk/kubernetes/example/localdev/php-fpm/ingress.yaml
apiVersion: networking.k8s.io/v1 #extensions/v1beta1
kind: Ingress
metadata:
  name: pimcore-website
  labels:
    app: pimcore-website
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/proxy-body-size: 350M
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  rules:
  - host: westvisions.dev.kranki.net
    http:
      paths:
      - path: /.*(jpg|webp|js|\.css|png|jpeg|svg|woff2)$
        pathType: Prefix
        backend:
          service:
            name: pimcore-varnish
            port:
              number: 80
      - path: /.*
        pathType: Prefix
        backend:
          service:
            name: pimcore-website-fpm
            port:
              number: 80
  tls:
   - hosts:
     - westvisions.dev.kranki.net
     secretName: dev-kranki-net-tls
